<resources>
    <string name="app_name">Seamless Authentication Integration Sample</string>

    <string name="title_communication_unit_list">Communication Units</string>
    <string name="title_communication_unit_detail">Communication Unit Detail</string>
    <string name="title_communication_unit_health">Communication Unit Health</string>

    <string name="unknown">unknown</string>

    <string name="error_unknown">Unknown error</string>
    <string name="error_missing_permissions">Required permissions missing</string>
    <string name="error_bluetooth_disabled">Bluetooth disabled</string>
    <string name="error_location_services_disabled">Location services disabled</string>

    <string name="status_unknown">@string/unknown</string>
    <string name="status_detection_started">Detection started</string>
    <string name="status_detection_stopped">Detection stopped</string>

    <string name="action_retry">Retry</string>
    <string name="action_enable">Enable</string>
    <string name="action_grant_permission">Grant</string>
    <string name="action_authenticate">Authenticate</string>
    <string name="action_authenticate_now">Authenticate Now</string>
    <string name="action_monitor_health">Monitor Health</string>

    <string name="communication_unit_name_unknown">Unknown Communication Unit</string>
    <string name="communication_unit_id_unknown">Unknown UUID</string>

    <string name="communication_unit_state_active">active</string>
    <string name="communication_unit_state_inactive">inactive</string>

    <string name="gateway_direction_entry">entry</string>
    <string name="gateway_direction_exit">exit</string>

    <string name="communication_unit_generic_description">Communication Unit, about %.1f meters away and currently %s.</string>
    <string name="communication_unit_door_description">Access control door, about %.1f meters away and currently %s. The closest opening is the %s.</string>
    <string name="communication_unit_gate_description">Access control gate, about %.1f meters away and currently %s. It has %d gateways, the closest one is the %s with index %d.</string>

    <string name="caption_authentication">Authentication</string>
    <string name="description_authentication">You can enable seamless authentication for this device. If enabled, you will be automatically authenticated when you are in range and while this view is open.</string>
    <string name="description_authentication_ids">This app uses a randomly generated user ID and device ID for demonstration purposes.\n\nUser ID:\n%1$s\n\nDevice ID:\n%2$s</string>
    <string name="label_seamless_authentication">Seamless authentication</string>
    <string name="label_authentication_range">Authentication range</string>
    <string name="status_authentication_succeeded">Authentication Succeeded</string>
    <string name="status_authentication_failed">Authentication Failed</string>

    <string name="caption_visualization">Visualization</string>

    <string name="caption_beacons">Beacons</string>
    <string name="description_beacons">This device uses detection beacons. You can check their configuration below.</string>

    <string name="beacon_type_unknown">Unknown Beacon</string>
    <string name="beacon_type_gateway_detection">Gateway Detection Beacon</string>
    <string name="beacon_type_direction_lock">Direction Lock Beacon</string>
    <string name="beacon_type_wake_up">Wake-Up Beacon</string>

    <string name="beacon_direction_entry">@string/gateway_direction_entry</string>
    <string name="beacon_direction_exit">@string/gateway_direction_exit</string>
    <string name="beacon_position_left">left</string>
    <string name="beacon_position_right">right</string>

    <string name="gateway_description">Gateway</string>
    <string name="entry_description">Entry</string>
    <string name="exit_description">Exit</string>

    <string name="generic_beacon_description">Type: %1$s\nMAC: %2$s\nTX: %3$s dBm\nCalibrated RSSI: %5$s dBm\nRSSI: %4$s dBm\nDistance: %6$s meters\nInterval: %7$s Hz</string>
    <string name="gateway_detection_beacon_description">Gate Index: %1$s\nGateway Index: %2$s\nDirection: %3$s\nPosition: %4$s</string>
    <string name="gateway_direction_lock_beacon_description">Gate Index: %1$s\nDirection: %2$s</string>

    <string name="monitoring_healthy">Healthy</string>
    <string name="monitoring_unhealthy">Unhealthy</string>
    <string name="monitoring_unknown">Unknown</string>
    <string name="monitoring_checking">Checking…</string>
    <string name="monitoring_count_unknown">\?</string>

    <string-array name="authentication_ranges">
        <item>50 cm</item>
        <item>1 m</item>
        <item>2 m</item>
        <item>5 m</item>
        <item>10 m</item>
    </string-array>

</resources>
